--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^5.0.2",
     "firebase": "^11.0.1",
+    "html2canvas": "^1.4.1",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
